// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Title> renders Title correctly 1`] = `
<div
  className="af-title-bar"
>
  <div
    className="container af-title-bar__wrapper"
  >
    <div
      className="burger-container"
    >
      <a
        aria-controls="mainmenu"
        aria-haspopup={true}
        className="btn af-title-bar__mobile-menu af-btn--circle"
        href="#"
        id="togglemenu"
        onClick={[Function]}
        role="button"
        tabIndex={0}
        title="Toggle menu"
      >
        <i
          className="glyphicon glyphicon-menu-hamburger"
        />
      </a>
    </div>
    <h1
      className="af-title-bar__title"
    >
      Toolkit Axa
      <small
        className="af-title-bar__subtitle"
      >
        Info complémentaire
      </small>
    </h1>
  </div>
</div>
`;

exports[`<Title> renders Title correctly without menu 1`] = `
<div
  className="af-title-bar"
>
  <div
    className="container af-title-bar__wrapper"
  >
    <h1
      className="af-title-bar__title"
    >
      Toolkit Axa
      <small
        className="af-title-bar__subtitle"
      >
        Info complémentaire
      </small>
    </h1>
  </div>
</div>
`;
